--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -95,6 +95,11 @@
   color: white;
 }
 
+.leaving {
+  margin-top: 10px;
+  margin-left: 30px;
+}
+
 @media only screen and (max-width: 541px) {
   .right {
     position: absolute;
